--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,13 +4,23 @@
   box-sizing: border-box;
 }
 
+body {
+  font-size: 14px;
+  font-family: 'Montserrat', sans-serif;
+  color: #FFFFFF;
+}
+
+a {
+  text-decoration: none;
+  color: #FFFFFF;
+}
+
 .float-left {
   float: left;
 }
 
-body {
-  font-size: 14px;
-  font-family: 'Montserrat', sans-serif;
+ul li {
+  list-style: none;
 }
 
 main {
@@ -18,24 +28,74 @@ main {
   background-color: #141922;
 }
 
-footer {
-  height: 90px;
+/* NAV */
+
+main .main-nav {
+  width: 230px;
+  height: 100%;
+  overflow-y: auto;
+  background-color: #000000;
+}
+
+main .main-nav .nav-top .nav-logo img {
+  padding: 20px;
+  width: 70%;
+}
+
+main .main-nav .nav-left {
+  display: flex;
+  flex-direction: column;
+}
+
+main .main-nav .nav-left .voice {
+  display: flex;
+  align-items: center;
+  height: 30px;
+  width: 100%;
+}
+
+main .main-nav .nav-left .green-bar {
+  height: 30px;
+  width: 2px;
+  margin-right: 10px;
+  background-color: #ADFF2F;
+}
+
+main .main-nav .nav-left img {
+  height: 20px;
+  width: 20px;
+  margin: 0 10px;
+}
+
+main .main-nav .nav-left .voice.non-selected {
+  color: #717171;
+}
+
+main .main-nav .nav-left .voice.non-selected img {
+  margin-left: 22px;
+}
+
+/* PLAYER */
+
+footer {height: 90px;
   color: #FFFFFF;
   background-color: #282828;
 }
 
-.song-details, .media-control, .volume-panel {  
+#player {
   display: flex;
-  flex-shrink: 0;
+  justify-content: space-between;
 }
 
-.song-details {
+/* ALBUM */
+
+.player-song {
+  display: flex;
+  align-items: center;
   padding: 15px 10px;
-  justify-content: flex-start;
-  width: 15%;
 }
 
-.song-details img {
+.player-song img {
   height: 60px;
 }
 
@@ -63,16 +123,17 @@ footer {
   margin-left: 10px;
 }
 
-.media-control {
+/* MEDIA CONTROLLER */
+
+.player-controller {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  width: 65%;
-  margin: 0 5%;
+  align-items: center;
 }
 
 .media-panel {
-  align-items: baseline;
+  align-items: center;
   justify-content: space-around;
 }
 
@@ -88,6 +149,31 @@ footer {
   display: flex;
   align-items: center;
 }
+
+.player-controller .full-bar {
+  width: 400px;
+}
+
+/* AUDIO CONTROLLER */
+
+.player-audio {
+  display: flex;
+  align-self: center;
+  justify-content: center;
+}
+
+.player-audio i {
+  margin: 0 7px;
+  font-size: 10px;
+}
+
+.player-audio .full-bar {
+  display: flex;
+  align-self: center;
+  width: 100px;
+}
+
+/* PROGRESS BAR */
 
 .full-bar {
   position: relative;
@@ -112,13 +198,17 @@ footer {
   background-color: #ADFF2F;
 }
 
-.volume-panel {
-  display: flex;
-  align-self: center;
-  justify-content: center;
-  width: 10%;
+.progress-bar .progress-circle::before {
+  position: relative;
+}* display: none; */
 }
 
-.volume-panel i {
-  margin: 0 5px;
+.progress-bar:hover .progress-circle {
+  position: absolute;
+  right: 0;
+  top: -2px;
+  height: 8px;
+  width: 8px;
+  border-radius: 50%;
+  background-color: #FFFFFF;
 }
