--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,7 @@ main .main-nav {
   width: 230px;
   height: 100%;
   overflow-y: auto;
+  overflow-x: hidden;
   background-color: #000000;
 }
 
@@ -65,6 +66,7 @@ main .main-nav .voice {
   align-items: center;
   height: 30px;
   width: 100%;
+  margin: 3px 0;
 }
 
 main .main-nav .voice h4:hover {
@@ -86,7 +88,6 @@ main .main-nav .nav-sections img {
 
 main .main-nav .voice.non-selected {
   color: #717171;
-  margin: 5px 0;
 }
 
 main .main-nav .nav-sections .voice.non-selected img {
@@ -116,6 +117,49 @@ main .main-nav .nav-center .voice {
 main .main-nav .nav-center .nav-playlists h4 {
   margin: 5px 0;
   font-size: 12px;
+}
+
+main .main-nav .nav-bottom::before {
+  position: relative;
+}
+
+main .main-nav .nav-bottom {
+  position: absolute;
+  bottom: 90px;
+  display: flex;
+  flex-direction: column;
+  margin: 0 20px;
+  width: 190px;
+}
+
+main .main-nav .nav-bottom .install {
+  display: flex;
+  align-items: center;
+  font-size: 10px;
+  padding: 10px 0;
+  color: #717171;
+  border-bottom: 1px solid #717171;
+}
+
+main .main-nav .nav-bottom .install img {
+  height: 10px;
+  width: 10px;
+  margin: 0 5px;
+}
+
+main .main-nav .nav-bottom .user {
+  display: flex;
+  align-items: center;
+  padding: 10px 0;
+  font-size: 10px;
+}
+
+main .main-nav .nav-bottom .user img {
+  height: 20px;
+  width: 20px;
+  margin: 0 5px;
+  background-color: #717171;
+  border-radius: 50%;
 }
 
 /* CONTENT */
@@ -165,6 +209,17 @@ main #content .covers .covers-sections ul li  {
   font-size: 12px;
   font-weight: 700;
   color: #717171;
+}
+
+main #content .covers .covers-sections ul li:hover {
+  color: #FFFFFF;
+}
+
+main #content .covers .covers-sections ul li.underlined-li::after  {
+  width: 50%;
+  height: 2px;
+  margin: auto;
+  background-color: #B0FF4F;
 }
 
 main #content .covers .recently-played,
@@ -221,15 +276,14 @@ main #content .covers .cover-list .cover .cover-img img {
   max-height: 150px;
 }
 
-
-
 main #content .covers .popular-artists .cover-list .cover .cover-img img {
   border-radius: 50%;
 }
 
 /* PLAYER */
 
-footer {height: 90px;
+footer {
+  height: 90px;
   color: #FFFFFF;
   background-color: #282828;
 }
